feat(modals): Add seller modals

--- a/src/assets/scss/Styles.scss
+++ b/src/assets/scss/Styles.scss
@@ -18,6 +18,7 @@
 @import "./components/message-list";
 @import "./components/image-uploader";
 @import "./components/modal-table-filter";
+@import "./components/modal";
 
 // Views
 @import "./views/products";
