--- a/src/assets/scss/views/_products.scss
+++ b/src/assets/scss/views/_products.scss
@@ -13,6 +13,10 @@
     padding: 20px 15px ;
     height: calc(100% - 85px);
 }
+.create-form__info-form {
+    padding: 20px 15px ;
+    height: calc(100%);
+}
 
 .create-with-title__info-form {
     padding: 20px 15px;
