--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -263,7 +263,28 @@ a,
     background-color: #F06292;
   }
 }
+.navbar{
+  width: 390px;
+  &__scroller {
+    overflow-y: auto !important;
+    overflow-x: auto !important;
 
+    &::-webkit-scrollbar {
+      width: 1px;
+      height: 0;
+    }
+
+    &::-webkit-scrollbar-track {
+      border-radius: 1px;
+      background-color: #F8BBD0;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 1px;
+      background-color: #F06292;
+    }
+  }
+}
 .mh-100 {
   min-height: 100vh;
 }
@@ -289,7 +310,7 @@ a,
   &__seen-active {
     width: 200px;
     background-color: rgba(127, 126, 128, 0.133);
-    border-radius: 30 !important;
+    border-radius: 30px !important;
     cursor: pointer;
   }
 
