--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -204,9 +204,11 @@ a,
 }
 
 .br {
+  &__8 {
+    border-radius: 8px;
+  }
   &__4 {
     border-radius: 4px;
-
   }
 }
 
@@ -407,4 +409,32 @@ a,
   &__expire{
     background: #FFEBEE;
   }
+}
+.retailShipment--work-days-card{
+  &__active{
+    background: #EEE !important;
+    border: unset;
+    span{
+      color: black;
+    }
+  }
+  &__disable{
+    background: #FAFAFA !important;
+    border: unset;
+    span{
+      color: #E0E0E0;
+    }
+  }
+  &__free{
+
+    background: #ffff !important;
+    border: 1px solid #E0E0E0 !important;
+    span{
+      color: black;
+    }
+  }
+  &__free:hover{
+        background: #ffff !important;
+       border: 1px solid #110833 !important;
+     }
 }
