--- a/src/assets/scss/views/_factor.scss
+++ b/src/assets/scss/views/_factor.scss
@@ -37,13 +37,13 @@
         height: 0;
         overflow: hidden;
 
-        &.active{
+        &.active {
             transition: height 0.5s ease;
             height: 140px;
             box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.05), 0px 2px 10px 2px rgba(0, 0, 0, 0.04);
         }
     }
-    
+
 
     &__item {
         width: 100%;
@@ -54,9 +54,25 @@
         font-variation-settings: "wght" 500;
         cursor: pointer;
 
-        &.de-active{
-            color:#E0E0E0;
+        &.de-active {
+            color: #E0E0E0;
             cursor: auto;
         }
+    }
+}
+
+.calculate-all {
+    border-top: 2px solid #F7F8FA;
+    border-bottom: 2px solid #F7F8FA;
+}
+
+.modal__header--factor {
+    position: relative;
+    width: 100%;
+
+    .modal__header__btn {
+        position: absolute;
+        left: -9px;
+        top: 10px;
     }
 }
