feat(retail-shipment):fix update retail shps

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -438,3 +438,10 @@ a,
        border: 1px solid #110833 !important;
      }
 }
+
+.retail-status-box{
+  height: 32px;
+  width: 148px;
+  border-radius: 8px;
+  background: #F5F5F5;
+}
