feat(shipmentRequest):complete the status bar color

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -445,3 +445,7 @@ a,
   border-radius: 8px;
   background: #F5F5F5;
 }
+.expanded-background {
+  padding: 7px 15px  !important; 
+  border-radius: 10px
+}
