--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -455,3 +455,22 @@ a,
   width: 100%;
   align-content: center;
 }
+.qr-code-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; 
+  max-height: 400px; 
+  overflow-y: auto;
+  direction: rtl
+}
+
+.qr-code-item {
+  flex-basis: calc(20% - 20px); 
+  margin: 10px; 
+  
+}
+.table-scroll-container {
+  max-height: 500px; 
+  overflow-y: auto; 
+}
