feat(crossdock):add listing and add cross dock to seller

--- a/src/assets/scss/views/_products.scss
+++ b/src/assets/scss/views/_products.scss
@@ -13,6 +13,11 @@
     padding: 20px 15px ;
     height: calc(100% - 85px);
 }
+
+.create-crossDock__info-form {
+    padding: 20px 0 ;
+    height: calc(100% - 85px);
+}
 .create-form__info-form {
     padding: 20px 15px ;
     height: calc(100%);
