--- a/src/assets/scss/views/_supplier.scss
+++ b/src/assets/scss/views/_supplier.scss
@@ -59,3 +59,32 @@
         }
     }
 }
+
+.cross-dock-seller {
+    .c-table {
+        overflow-x: auto;
+        height: calc(100% - 70px);
+            -webkit-overflow-scrolling: touch;
+
+            &::-webkit-scrollbar {
+                height: 5px;
+            }
+
+            &::-webkit-scrollbar-track {
+                border-radius: 3px;
+                background-color: #F8BBD0;
+
+            }
+
+            &::-webkit-scrollbar-thumb {
+                border-radius: 3px;
+                background-color: #F06292;
+            }
+
+        &__header,
+        .stretch-table{
+            width: 100%;
+            color: #9E9E9E !important;
+        }
+    }
+}
