feat(locationg):fix scan page

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -479,3 +479,20 @@ a,
   max-height: 500px; 
   overflow-y: auto; 
 }
+
+.scan-success{
+  background: #43A047 !important;
+}
+
+.bottom-box{
+  position: fixed;
+  bottom: 11px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.scan-error{
+  background: #EF5350 !important;
+}
