feat(bulk):fixed

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -499,3 +499,9 @@ a,
 .scan-error{
   background: #EF5350 !important;
 }
+
+.center-divider {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+}
