--- a/src/assets/scss/Styles.scss
+++ b/src/assets/scss/Styles.scss
@@ -19,6 +19,7 @@
 @import "./components/image-uploader";
 @import "./components/modal-table-filter";
 @import "./components/modal";
+@import "./components/accordion";
 
 // Views
 @import "./views/products";
