--- a/src/assets/scss/general/_typography.scss
+++ b/src/assets/scss/general/_typography.scss
@@ -182,6 +182,10 @@ p {
   font-size: 10px !important;
   font-variation-settings: "wght" 400
 }
+.t11500 {
+  font-size: 11px !important;
+  font-weight: 500;
+}
 
 .t12300 {
   font-size: 12px !important;
@@ -236,6 +240,10 @@ p {
 .t16600 {
   font-size: 16px !important;
   font-variation-settings: "wght" 600
+}
+.t16700 {
+  font-size: 16px !important;
+  font-weight: 700
 }
 
 .t16400 {
