fix(warehouse):fix bugs

--- a/src/assets/scss/general/_typography.scss
+++ b/src/assets/scss/general/_typography.scss
@@ -232,7 +232,10 @@ p {
   font-variation-settings: "wght" 300
 }
 
-.t16800 {
+.t16500 {
+  font-size: 16px !important;
+  font-variation-settings: "wght" 500
+}.t16800 {
   font-size: 16px !important;
   font-variation-settings: "wght" 800
 }
