--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -503,3 +503,19 @@ a,
   margin-right: auto;
   width: 80%;
 }
+
+.main-body-modal {
+  padding: 30px;
+   width: 550px;
+   border-style: solid; 
+ border-width: 2px; 
+ border-color: #000000; 
+  
+}
+.border-nested-modal{
+   padding: 20px;
+   border-style: solid; 
+ border-width: 1px; 
+ border-radius: 10px;
+ border-color: #e9dcdcb6; 
+}
