--- a/src/assets/scss/general/_container.scss
+++ b/src/assets/scss/general/_container.scss
@@ -3,5 +3,12 @@
 // ---------------------------------------------------- //
 
 .container-400{
-    width: 400px !important;
+    width: 400px !important ;
+    @media (max-width: 400px) {
+        width: 300px !important;
+    }
+}
+
+.scan-container{
+    max-width: 900px !important;
 }
