--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -513,3 +513,14 @@ a,
  border-radius: 10px;
  border-color: #e9dcdcb6; 
 }
+
+.loading_modal{
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: #0000004a;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
