feat(orderPackagng):fixed bugs

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -524,3 +524,9 @@ a,
   align-items: center;
   justify-content: center;
 }
+.seller__check-sku-btn- {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #FCE4EC;
+}
