--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -383,6 +383,11 @@ a,
   border-radius: 50%;
   background: #FCE4EC;
 }
+.check__barcode-box {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
 
 .seller__add-sku-btn:hover {
   cursor: pointer;
