fix(zone): Add zone page

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -400,6 +400,7 @@ a,
 .v-badge__badge,
 .v-select__selection-text,
 .v-overlay__content,
+span.v-autocomplete__selection-text,
 .text-clamp span {
   font-family: IRANSansNum !important;
 }
