feat( dashboard menu): Add dashboard menu

--- a/src/assets/scss/components/_menu.scss
+++ b/src/assets/scss/components/_menu.scss
@@ -39,6 +39,10 @@
             .v-list-item__content {
                 color: #E91E63;
             }
+
+            .v-list-item__prepend > .v-icon{
+                margin-left: 23px !important;
+            }
         }
 
         &:hover {
