fix(order packaging):fix post modal ui

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -519,9 +519,11 @@ span.v-autocomplete__selection-text,
 .border-nested-modal{
    padding: 20px;
    border-style: solid; 
- border-width: 1px; 
- border-radius: 10px;
- border-color: #e9dcdcb6; 
+   border-width: 1px;
+   border-radius: 10px;
+   border-color: #e9dcdcb6;
+  width: 277px;
+  height: 199px;
 }
 
 .loading_modal{
