--- a/src/assets/scss/general/_typography.scss
+++ b/src/assets/scss/general/_typography.scss
@@ -178,6 +178,10 @@ p {
   font-size: 10px !important
 }
 
+.t8400 {
+  font-size: 8px !important;
+  font-variation-settings: "wght" 400
+}
 .t10400 {
   font-size: 10px !important;
   font-variation-settings: "wght" 400
