hotfix(print order label):fix size

--- a/src/assets/scss/general/_typography.scss
+++ b/src/assets/scss/general/_typography.scss
@@ -182,6 +182,14 @@ p {
   font-size: 8px !important;
   font-variation-settings: "wght" 400
 }
+.t10500 {
+  font-size: 10px !important;
+  font-variation-settings: "wght" 500
+}
+.t10600 {
+  font-size: 10px !important;
+  font-variation-settings: "wght" 600
+}
 .t10400 {
   font-size: 10px !important;
   font-variation-settings: "wght" 400
