--- a/src/assets/scss/general/_typography.scss
+++ b/src/assets/scss/general/_typography.scss
@@ -213,6 +213,10 @@ p {
   font-size: 12px !important;
   font-variation-settings: "wght" 500
 }
+.t12600 {
+  font-size: 12px !important;
+  font-variation-settings: "wght" 600
+}
 
 .t13400 {
   font-size: 13px !important;
