feat(OccasionBanner):edit OccasionBanner

--- a/src/assets/scss/general/_main.scss
+++ b/src/assets/scss/general/_main.scss
@@ -87,6 +87,9 @@ body {
 .br-12 {
   border-radius: 12px !important;
 }
+.br-4 {
+  border-radius: 4px !important;
+}
 
 .default-file-input {
   opacity: 0;
