feat(pickUp): ui done, block of api

--- a/src/assets/scss/general/_typography.scss
+++ b/src/assets/scss/general/_typography.scss
@@ -290,6 +290,11 @@ p {
   font-variation-settings: "wght" 400
 }
 
+.t20700 {
+  font-size: 20px !important;
+  font-variation-settings: "wght" 700
+}
+
 .t20600 {
   font-size: 20px !important;
   font-variation-settings: "wght" 600
