--- a/src/assets/scss/Styles.scss
+++ b/src/assets/scss/Styles.scss
@@ -6,7 +6,7 @@
 @import "./general/font";
 @import "./general/main";
 @import "./general/container";
-@import "./general/typography";
+//@import "./general/typography";
 
 // Components
 @import "./components/menu";
