feat(main.scss): class in main.scss

--- a/src/assets/scss/Styles.scss
+++ b/src/assets/scss/Styles.scss
@@ -6,15 +6,12 @@
 @import "./general/font";
 @import "./general/main";
 @import "./general/container";
-@import "./general/typography";
 
 // Components
 @import "./components/menu";
 @import "./components/table";
 @import "./components/slider";
-@import "./components/ticket";
 @import "./components/ckeditor";
-@import "./components/chat-page";
 @import "./components/message-list";
 @import "./components/image-uploader";
 @import "./components/modal-table-filter";
@@ -26,6 +23,9 @@
 @import "./views/supplier";
 @import "./views/role-prmission";
 @import "./views/factor";
+@import "./views/ticket";
+@import "./views/chat-page";
 
 // Tools
-@import "./tools/typo;
+@import "./tools/typo";
+@import "./tools/helpers";
