feat(main.scss): class in main.scss

--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -82,3 +82,9 @@ $parent: 'c-table';
     border: 1px solid #F1F5F9;
     border-radius: 15px !important;
 }
+
+.null-data-table {
+    position: absolute;
+    top: 30%;
+    right: 43%;
+  }
