fix(text-field):add haight

--- a/src/assets/scss/kits/_text-field.scss
+++ b/src/assets/scss/kits/_text-field.scss
@@ -22,7 +22,7 @@
     }
   
     &__control {
-        //height: 42px !important;
+        height: 42px !important;
         direction: rtl !important;
     }
 }
@@ -37,8 +37,8 @@
   
     &__input {
       padding: 5px !important;
-      //height: 42px !important;
-      //min-height: 42px !important;
+      height: 42px !important;
+      min-height: 42px !important;
     }
   
     &__outline__end,
